<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">Register</string>

    <!--Strings related to calculate bmi-->
    <string name="action_calculate_bmi">Calculate</string>
    <string name="action_show_bmi_history">Show History</string>
    <string name="prompt_height_m">Height(m)</string>
    <string name="prompt_weight_kg">Weight(kg)</string>
    <string name="result">Result</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="action_save_btn">save</string>
    <string name="action_show_bmi_page">calculate bmi</string>
    <string name="prompt_full_name">full name</string>
    <string name="prompt_health_card_number">Health Card Number</string>
    <string name="prompt_update_password">Password</string>
</resources>
