<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mcda5550.bmiapp.activity_calculate_bmi">

    <ScrollView
        android:id="@+id/bmi_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/bmi_calculate_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/heightTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/prompt_height_m" />

            <EditText
                android:id="@+id/weightTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/prompt_weight_kg" />

            <Button
                android:id="@+id/calculateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onCalculateClick"
                android:text="@string/action_calculate_bmi" />

            <EditText
                android:id="@+id/resultTextField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:hint="@string/result" />

            <Button
                android:id="@+id/historyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onHistoryClick"
                android:text="@string/action_show_bmi_history" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>